--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,15 @@ body { line-height:2 ;
 background-color: rgb(206, 123, 123);}
 
 footer { text-align: center;}
+article ol  {font-weight: bold;
+    font-size: large;
+    color: rgb(39, 36, 36);
+list-style: decimal;
+margin-left: 50px;
+    margin-right: 50px ;}
+ h2 { margin-left: 30px;
+font-weight: bolder;
+font-size: large;
+margin-top: 20px;}
+    
+     
