--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ font-size: large;
 color: white;
 background-color: black;
 
-list-style: square;
+list-style: disc;
 margin-left: 30px;
 margin-right: 30px ;}
 
