--- a/css/style.css
+++ b/css/style.css
@@ -10,26 +10,37 @@ color: white;}
 
 ul {font-weight: normal;
 font-size: large;
-color: white;
+color : white;
 background-color: black;
 
-list-style: disc;
+list-style-type: disc;
+
 margin-left: 30px;
 margin-right: 30px ;}
 
 body { line-height:2 ;
 background-color: rgb(206, 123, 123);}
 
-footer { text-align: center;}
+footer { text-align: center;
+}
+
 article ol  {font-weight: bold;
     font-size: large;
     color: rgb(39, 36, 36);
 list-style: decimal;
 margin-left: 50px;
-    margin-right: 50px ;}
+  }
+
  h2 { margin-left: 30px;
 font-weight: bolder;
 font-size: large;
 margin-top: 20px;}
     
-     
+   img  {display: block;
+    float: right;
+ margin-top: opx;
+    margin-right: 30px;
+    margin-bottom: 50px;
+    
+   
+   }  
